--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blackhole (0.1.0-2) unstable; urgency=low
+
+  * Debianization has been reviewed.
+
+ -- Evgenyi Safronov <division494@gmail.com>  Tue, 08 Apr 2014 14:20:00 +0400
+
 blackhole (0.1.0-1) unstable; urgency=low
 
   * Initial release.
