--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (0.2.3-1) unstable; urgency=low
+
+  * Misc: fixed debianization for precise, which allows to install package with
+    libboost 1.46 as like as 1.48.
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 29 Sep 2014 10:56:48 +0400
+
 blackhole (0.2.2-1) unstable; urgency=low
 
   * Feature: added file sink which can automatically reopen files after they
