--- a/doc/manual/feature/formatter/json.rmd
+++ b/doc/manual/feature/formatter/json.rmd
@@ -1,14 +1,4 @@
-#Formatters
-
-Formatters are entities that map log event to string. Blackhole supports three
-built-in formatters:
-
-  * [String](formatter/string). Maps log event to plain string by specified
-  pattern with attributes support.
-  * [JSON](#json). Maps log event to JSON tree.
-  * [Msgpack](#msgpack). Maps log event to message-packed tree.
-
-## JSON
+# JSON
 Maps log event to JSON tree. It takes attributes of log message and represents
 this `attribute_name=attribute_value` pair into JSON objects.
 
@@ -42,7 +32,7 @@ Include the special header
 #include <blackhole/formatter/json.hpp>
 ~~~
 
-### Registration
+## Registration
 When we register **json** formatter with some sink `json_t` should be used.
 For example:
 
@@ -54,7 +44,7 @@ This code register **syslog** sink and **json** formatter pair. How to register
 another combinations of sinks and formatters check the
 ["Registration rules"]() article.
 
-### Configuration
+## Configuration
 
 Example of configuration
 
@@ -93,29 +83,5 @@ The next output will be produced
 }
 ~~~
 
-### Example
-In development.
-
-## Msgpack
-This formatter get pairs of `attribute_name:attribute_value` and convert it to
-the msgpack object.
-
-### Registration
-When we register `msgpack`-formatter with some sink `msgpack_t` should be used.
-For example:
-
-~~~ cpp
-repository_t::instance().configure<sink::syslog_t<level>, formatter::msgpack_t>();
-~~~
-
-### Configuration
-
-It doesn't have any configuration parameter and you just need to type formatter
-as "msgpack"
-
-~~~ cpp
-formatter_config_t formatter("msgpack");
-~~~
-
-### Example
+## Example
 In development.
