[Code Clean] And one more.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,7 +31,7 @@ blackhole (0.4.0-0rc1) unstable; urgency=low
   * Performance: avoid unnecessary string copying or moving when comparing attributes.
   * Performance: explicitly move the value when opening a record with a single attribute.
   * Testing: added multithreaded scalability benchmarks.
-  * TestingL added huge number of benchmarks (approximately 300), that test every possible
+  * Testing: added huge number of benchmarks (approximately 300), that test every possible
     combination of cases.
   * Testing: fixed possible conditional jump.
   * Testing: fixed comparing signed with signed and vise versa.
