--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blackhole (0.4.0-1) unstable; urgency=low
+
+  * Release version.
+
+ -- Evgeny Safronov <division494@gmail.com>  Tue, 13 Jan 2015 14:43:58 +0300
+
 blackhole (0.4.0-0rc3) unstable; urgency=low
 
   * Bug fix: allow to override LWP attribute presence.
