--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blackhole (0.4.0-2) unstable; urgency=low
+
+  * Bug fix: accidentally forgot to install include files.
+
+ -- Evgeny Safronov <division494@gmail.com>  Fri, 16 Jan 2015 15:49:59 +0300
+
 blackhole (0.4.0-1) unstable; urgency=low
 
   * Release version.
