--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (0.4.1-1) unstable; urgency=low
+
+  * Bug fix: Fixed corrupted move constructor for logger class.
+  * Other: optional syntax checking option.
+
+ -- Evgeny Safronov <division494@gmail.com>  Sat, 14 Feb 2015 20:43:24 +0300
+
 blackhole (0.4.0-2) unstable; urgency=low
 
   * Bug fix: accidentally forgot to install include files.
