--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+blackhole (0.5.0-3) unstable; urgency=low
+
+  * Bug fix: fixed compiler version determiner macro to be usable with GCC5.
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 20 Jul 2015 12:08:27 +0300
+
 blackhole (0.5.0-2) unstable; urgency=low
 
-  * Fix debianization to prevent conflict with old blackhole-dev package.
+  * Bug fix: fixed debianization to prevent conflict with old blackhole-dev package.
 
  -- Anton Matveenkov <antmat@me.com>  Tue, 07 Jul 2015 15:30:45 +0300
 
