--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-blackhole (1.0.0-0alpha2) unstable; urgency=low
+blackhole (1.0.0-0alpha2) UNRELEASED; urgency=low
 
+  * API: change the interface (and ABI) of the string formatter to
+    make it possible to change the implementation or add functionality
+    without further breaking.
   * Bug fix: fix build on linux with clang.
   * Bug fix: fix undefined variable warnings on linux.
   * Bug fix: suppress sometimes unused variable on linux.
 
- -- Evgeny Safronov <division494@gmail.com>  Wed, 20 Jan 2016 17:25:59 +0300
+ -- Evgeny Safronov <division494@gmail.com>  Thu, 28 Jan 2016 15:21:36 +0300
 
 blackhole (1.0.0-0alpha1) unstable; urgency=low
 
