--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ blackhole (1.0.0-0alpha2) UNRELEASED; urgency=low
   * API: change the interface (and ABI) of the string formatter to
     make it possible to change the implementation or add functionality
     without further breaking.
+  * Feature: enable filtering attributes by name for JSON formatter.
   * Bug fix: fix build on linux with clang.
   * Bug fix: fix undefined variable warnings on linux.
   * Bug fix: suppress sometimes unused variable on linux.
