--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-blackhole (1.0.0-0alpha7) UNRELEASED; urgency=low
+blackhole (1.0.0-0alpha7) unstable; urgency=low
 
   * Feature: JSON formatter now inserts process and thread id fields.
   * Feature: flush interval option can now be specified in a config to the file
