--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (1.0.0-0alpha9) unstable; urgency=low
+
+  * Feature: string formatter is now able to optionally represent timestamp
+    value using local timezone.
+
+ -- Evgeny Safronov <division494@gmail.com>  Tue, 15 Mar 2016 21:26:12 +0300
+
 blackhole (1.0.0-0alpha8) unstable; urgency=low
 
   * Feature: JSON formatter can now mutate severity fields into their string
