--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (1.0.0-0alpha11) unstable; urgency=low
+
+  * Feature: string formatter now supports extensions for leftover placeholder
+    allowing to configure attribute formatting pattern and separator.
+
+ -- Evgeny Safronov <division494@gmail.com>  Fri, 01 Apr 2016 17:09:17 +0300
+
 blackhole (1.0.0-0alpha10) unstable; urgency=low
 
   * Debian: add more links to migration crate.
