--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blackhole (1.0.0-0alpha13) unstable; urgency=low
+
+  * Feature: meet the syslog sink.
+
+ -- Evgeny Safronov <division494@gmail.com>  Thu, 21 Apr 2016 16:55:03 +0300
+
 blackhole (1.0.0-0alpha12) unstable; urgency=low
 
   * Bug fix: string View class now is properly compared with common string
