--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+blackhole (1.0.0-0beta1) UNRELEASED; urgency=low
+
+  * Feature: introducing a new asynchronous sink.
+    This kind of sink wraps the other sink and causes log events to be written
+    to them on a separate thread.
+
+ -- Evgeny Safronov <division494@gmail.com>  Tue, 10 May 2016 22:16:50 +0300
+
 blackhole (1.0.0-0alpha14) unstable; urgency=low
 
   * Bug fix: fix compilation on clang with boost 1.55.
